# job-runner

./: .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  DEPLOY.md  DEVELOPERS.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Procfile  README-GN.md  README.md  app.json  docker-compose.graphnet.yaml  docker-compose.yaml  dotenv-sample  gunicorn.conf.py  justfile  local-setup.sh  local-test.sh  manage.py  package-lock.json  package.json  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.prod.txt  requirements.tools.in  requirements.tools.txt  requirements.txt  requirements.uvmirror  requirements.uvmirror.txt  run.py  setup.py
.github/: dependabot.yml
.github/workflows/: add_sbom_to_release.yaml  build_and_publish.yaml  build_and_publish_dev.yaml  build_publish_and_deploy.yaml  check-docs.yml  dependency_review.yaml  grype.yaml  grype_scan.yaml  new.yaml  schedule_grype.yaml  temporary_publish_v2.yaml  tests.yml  update-dependencies.yml  uvmirror-check.yml
.old-version/: Makefile  dotenv-sample  setup.py
.old-version/jobrunner/: exceptions.py
.old-version/tests/: conftest.py  test_job.py
agent/: config.py  main.py  metrics.py  service.py  task_api.py  tracing.py
agent/cli/: ehrql_log_telemetry.py  ehrql_telemetry.py  kill_task.py  update_manifest_for_old_job.py  update_manifest_out_of_date_actions.py
agent/executors/: __init__.py  local.py  volumes.py
agent/lib/: docker.py  docker_stats.py
common/: config.py  job_executor.py  schema.py  tracing.py
common/lib/: git.py  github_validators.py  log_utils.py  path_utils.py  service_utils.py  string_utils.py
controller/: config.py  create_or_update_jobs.py  main.py  models.py  queries.py  reusable_actions.py  service.py  sync.py  task_api.py  ticks.py  tracing.py
controller/cli/: add_job.py  flags.py  migrate.py  prepare_for_reboot.py  utils.py
controller/lib/: database.py  docker.py  yaml_utils.py
controller/permissions/: datasets.py  utils.py
controller/webapp/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
controller_app/: asgi.py  settings.py  urls.py  views.py
docker/: .gitignore  Dockerfile  Makefile  dependencies.txt  docker-compose.yaml  docker_dotenv_sample  justfile
docker/scripts/: agent.sh  bashrc_addendum  controller.sh  django_bash_completion  test-controller.sh
docker/ssh/: config
docs/: agent_state_diagram.md  controller_state_diagram.md  execution_state_diagram.md  local_executor_run.md
jobrunner/: __init__.py  actions.py  add_job.py  agent.py  config.py  controller.py  create_or_update_jobs.py  database.py  docker.py  docker_stats.py  extract_stats.py  extractors.py  git.py  git_askpass_access_token.py  github_validators.py  job.py  job_executor.py  kill_job.py  local_docker_job_executor.py  local_run.py  log_utils.py  main.py  manage_jobs.py  manifest_to_database_migration.py  models.py  path_utils.py  project.py  queries.py  record_stats.py  retry_job.py  reusable_actions.py  run.py  schema.py  schema.sql  server_interaction.py  service.py  string_utils.py  subprocess_utils.py  sync.py  system_stats.py  (+2 more)
jobrunner/agent/: main.py  metrics.py  service.py  task_api.py  tracing.py
jobrunner/cli/: add_backend_to_flags.py  add_backend_to_job.py  add_job.py  extract_stats.py  flags.py  kill_job.py  local_run.py  manifest_migration.py  manifests.py  migrate.py  prepare_for_reboot.py  retry_job.py
jobrunner/config/: agent.py  common.py  controller.py
jobrunner/controller/: main.py  service.py  task_api.py  ticks.py
jobrunner/controller_app/: settings.py  urls.py  views.py  wsgi.py
jobrunner/executors/: .volumes.py.swp  __init__.py  local.py  logging.py  volumes.py
jobrunner/k8s/: k8s_runner.py  post.py  pre.py
jobrunner/lib/: __init__.py  commands.py  database.py  debug_tests.py  docker.py  docker_stats.py  git.py  github_validators.py  log_utils.py  lru_dict.py  path_utils.py  string_utils.py  subprocess_utils.py  system_stats.py  yaml_utils.py
k8s/: __init__.py  k8s_runner.py  pre.py
old-version/: Dockerfile  README.md  docker-compose.yaml
old-version/jobrunner/: git_askpass_access_token.py  main.py  project.py  server_interaction.py
old-version/tests/: common.py  test_exceptions.py
playbooks/: TPP.md  emis-backend.md  tpp-backend.md
runner/: __init__.py  exceptions.py  job.py  main.py  project.py  server_interaction.py  utils.py
scripts/: archive.sh  host-services-for-win-testing.sh  install.bat  mount-job-volume.sh  run-tests-in-windows.sh  run.sh  test_archive.sh  unarchive.sh  update-docker-image.sh  watch-job-logs.sh
tests/: common.py  conftest.py  factories.py  fakes.py  test_actions.py  test_agent.py  test_config.py  test_controller.py  test_create_or_update_jobs.py  test_database.py  test_docker.py  test_docker_stats.py  test_exceptions.py  test_extractors.py  test_git.py  test_integration.py  test_integration_new_sync.py  test_integration_old_sync.py  test_job.py  test_job_executor.py  test_job_resource_weights.py  test_jobrunner.py  test_k8s_pre.py  test_local_executor.py  test_local_executor_hypothesis.py  test_local_run.py  test_log_utils.py  test_logging_executor.py  test_manage_jobs.py  test_manifest_to_database_migration.py  test_models.py  test_project.py  test_queries.py  test_record_stats.py  test_reusable_actions.py  test_run.py  test_run_hypothesis.py  test_runner.py  test_schema.py  test_service.py  (+7 more)
tests/agent/: conftest.py  stubs.py  test_agent.py  test_config.py  test_get_workspace_action_names_bug.py  test_local_executor.py  test_main.py  test_metrics.py  test_service.py  test_task_api.py  test_tracing.py
tests/cli/: test_add_backend_to_flags.py  test_add_backend_to_job.py  test_add_job.py  test_flags.py  test_kill_job.py  test_local_run.py  test_manifest_migration.py  test_prepare_for_reboot.py  test_retry_job.py
tests/common/: test_config.py  test_job_executor.py  test_schema.py  test_tracing.py
tests/controller/: test_actions.py  test_config.py  test_create_or_update_jobs.py  test_job_resource_weights.py  (+10 more)
v2/: README.md  requirements.txt
(+167 files in other folders)
